# SpectraAssure_Diff_Cleanup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  scan.yml  security.yml
src/diff_cleanup/: __init__.py  __main__.py  _msgpack.py  default_config.toml  html_report.py
tests/: test_diff_cleanup.py  test_html_report.py
tests/data/: report.rl-diff-glassworm-malicious.json
